fix: change tags

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <header>
       <div class="avatar">
-        <img id="avatar__foto" src="./foto.jpg" alt="foto" />
+        <img id="avatar__foto" src="./foto.jpg" alt="foto">
       </div>
       <section class="contact_info">
         <h1><span id="surname">Hrytsanok</span> Anastasiya</h1>
@@ -47,17 +47,17 @@
         <div class="education__container content light_background">
           <h5>Faculty of Economics and Management (economist-manager)</h5>
           <p>
-            Belarus State Economic University / Minsk, Belarus<br />
+            Belarus State Economic University / Minsk, Belarus<br>
             <i>2019</i>
           </p>
           <h5>"Software Testing Introduction" course</h5>
           <p>
-            EPAM Systems Inc. / Minsk, Belarus<br />
+            EPAM Systems Inc. / Minsk, Belarus<br>
             <i>2021</i>
           </p>
           <h5>"Front-end (JS + React)" course</h5>
           <p>
-            IT Shatle / Minsk, Belarus<br />
+            IT Shatle / Minsk, Belarus<br>
             <i>2022</i>
           </p>
         </div>
